cryptography/1.0/modules/ROOT/pages/cryptography-module-reference.adoc

= Cryptography Module Reference 1.x


Cryptography Module provides cryptography capabilities to a Mule application.

== Configurations
---
[[jce]]
=== JCE


JCE configuration for Java keystores and inline keys.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Keystore a| String |  Path to the keystore file. |  | 
| Type a| Enumeration, one of:

** JKS
** JCEKS
** PKCS12 |  Type of the keystore. |  JKS | 
| Password a| String |  Password for unlocking the keystore. |  | 
| Jce Key Infos a| Array of One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  List of keys to be considered, with internal IDs for referencing them. |  | 
| Use random IVs a| Boolean |  Use random initial vectors (IVs) for CBC algorithms. In case of decryption, it assumes IV is prepended on the ciphertext. |  false | 
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  | 
|===


== Supported Operations
* <<jceDecrypt>> 
* <<jceEncrypt>> 
* <<jceSign>> 
* <<jceValidate>> 
* <<pgpDecrypt>> 
* <<pgpEncrypt>> 
* <<pgpEncryptAndSign>> 
* <<pgpEncryptBinary>> 
* <<pgpSign>> 
* <<pgpSignBinary>> 
* <<pgpValidate>> 
* <<xmlDecrypt>> 
* <<xmlEncrypt>> 
* <<xmlSign>> 
* <<xmlValidate>>
* <<calculateChecksum>>
* <<validateChecksum>>


---
[[pgp]]
=== PGP


Keystore configuration for GPG. Contains a list of keys with internal names to use in the operations.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Public Keyring a| String |  Public key ring file. |  | 
| Private Keyring a| String |  Private key ring file. |  | 
| Pgp Key Infos a| Array of One of:

* <<PgpAsymmetricKeyInfo>> |  List of keys to be considered, with internal IDs for referencing them. |  | 
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  | 
|===





== Operations

[[jceDecrypt]]
=== Jce Decrypt
`<crypto:jce-decrypt>`


Decrypt a stream using JCE, with a key.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Binary |  The content to decrypt |  `#[payload]` | 
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Cipher a| String | A raw cipher string in the form "algorithm/mode/padding" according to the Java crypto documentation, for example `AES/CBC/PKCS5Padding`. Note that GCM mode is currently not supported, and not all algorithm/mode/padding combinations are valid. |  | 
| Algorithm a| Enumeration, one of:

** AES
** AESWrap
** ARCFOUR
** Blowfish
** DES
** DESede
** RC2
** DESedeWrap
** RSA |  Algorithm from a list of valid definitions, this is preferred. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<jce>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:PASSPHRASE 
* CRYPTO:PARAMETERS 
* CRYPTO:DECRYPTION 


[[jceEncrypt]]
=== Jce Encrypt
`<crypto:jce-encrypt>`


Encrypt a stream using JCE, with a key.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Binary |  The content to encrypt |  `#[payload]` | 
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Cipher a| String | A raw cipher string in the form "algorithm/mode/padding" according to the Java crypto documentation, for example `AES/CBC/PKCS5Padding`. Note that GCM mode is currently not supported, and not all algorithm/mode/padding combinations are valid. |  | 
| Algorithm a| Enumeration, one of:

** AES
** AESWrap
** ARCFOUR
** Blowfish
** DES
** DESede
** RC2
** DESedeWrap
** RSA |  Algorithm from a list of valid definitions, this is preferred. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<jce>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:PARAMETERS 


[[jceSign]]
=== Jce Sign
`<crypto:jce-sign>`


Sign a stream using JCE, with a key.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Binary |  The content to sign |  `#[payload]` | 
| Algorithm a| Enumeration, one of:

** MD2withRSA
** MD5withRSA
** SHA1withRSA
** SHA224withRSA
** SHA256withRSA
** SHA384withRSA
** SHA512withRSA
** NONEwithDSA
** SHA1withDSA
** SHA224withDSA
** SHA256withDSA
** HmacMD5
** HmacSHA1
** HmacSHA224
** HmacSHA256
** HmacSHA384
** HmacSHA512 |  The algorithm used for signing |  HmacSHA256 | 
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<jce>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:KEY 
* CRYPTO:PASSPHRASE 
* CRYPTO:SIGNATURE 


[[jceValidate]]
=== Jce Validate
`<crypto:jce-validate>`


Validate a stream against a signature, using a key.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Value a| Binary |  The message to authenticate |  `#[payload]` | 
| Expected a| String |  The signature to validate |  | x
| Algorithm a| Enumeration, one of:

** MD2withRSA
** MD5withRSA
** SHA1withRSA
** SHA224withRSA
** SHA256withRSA
** SHA384withRSA
** SHA512withRSA
** NONEwithDSA
** SHA1withDSA
** SHA224withDSA
** SHA256withDSA
** HmacMD5
** HmacSHA1
** HmacSHA224
** HmacSHA256
** HmacSHA384
** HmacSHA512 |  The algorithm used for signing |  HmacSHA256 | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
|===


=== For Configurations
* <<jce>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:VALIDATION 


[[xmlDecrypt]]
=== Xml Decrypt
`<crypto:xml-decrypt>`


Decrypt the XML document.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Binary |  The document to decrypt |  `#[payload]` | 
| Element Path a| String |  |  | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<jce>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:PASSPHRASE 
* CRYPTO:PARAMETERS 
* CRYPTO:DECRYPTION 


[[xmlEncrypt]]
=== Xml Encrypt
`<crypto:xml-encrypt>`


Encrypt the XML document.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Binary |  The document to encrypt |  `#[payload]` | 
| Algorithm a| Enumeration, one of:

** AES_CBC
** AES_GCM
** TRIPLEDES |  The algorithm for encryption |  AES_CBC | 
| Element Path a| String |  The path to the element to encrypt, if empty the whole document is considered |  | 
| Encrypt Content a| Boolean |  encrypt the XML element or its content, if false the whole XML element is encrypted. |  true | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Encryption Algorithm a| Enumeration, one of:

** RSA15
** RSA_OAEP
** RSA_OAEP_11 |  |  RSA_OAEP | 
| Canonicalization algorithm a| Enumeration, one of:

** EXCLUSIVE
** EXCLUSIVE_WITH_COMMENTS
** INCLUSIVE
** INCLUSE_WITH_COMMENTS |  |  EXCLUSIVE | 
| Digest Algorithm a| Enumeration, one of:

** RIPEMD160
** SHA1
** SHA256
** SHA512 |  |  SHA1 | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<jce>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:PARAMETERS 


[[xmlSign]]
=== Xml Sign
`<crypto:xml-sign>`


Sign an XML document.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Binary |  The XML document to sign |  `#[payload]` | 
| Digest Algorithm a| Enumeration, one of:

** RIPEMD160
** SHA1
** SHA256
** SHA512 |  The hashing algorithm for signing |  SHA256 | 
| Canonicalization Algorithm a| Enumeration, one of:

** EXCLUSIVE
** EXCLUSIVE_WITH_COMMENTS
** INCLUSIVE
** INCLUSE_WITH_COMMENTS |  The canonicalization method for whitespace and namespace unification |  EXCLUSIVE | 
| Type a| Enumeration, one of:

** DETACHED
** ENVELOPED
** ENVELOPING |  The type of signature to create |  ENVELOPED | 
| Element Path a| String |  for internally detached signatures, an unambiguous XPath expression resolving to the element to sign |  | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<jce>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:KEY 
* CRYPTO:PASSPHRASE 
* CRYPTO:PARAMETERS 
* CRYPTO:SIGNATURE 


[[xmlValidate]]
=== Xml Validate
`<crypto:xml-validate>`


Validate an XML signed document.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Binary |  The document to verify (includes the signature) |  `#[payload]` | 
| Element Path a| String |  for internally detached signatures, an unambiguous XPath expression resolving to the signed element |  | 
| Use Inline Certificate If Present a| Boolean |  Use inline defined certificate if found |  false | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
|===


=== For Configurations
* <<jce>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:VALIDATION 


[[pgpDecrypt]]
=== Pgp Decrypt
`<crypto:pgp-decrypt>`


Decrypt a stream using PGP, giving the original data as a result. The decryption is done with the private key, so the secret passphrase must be provided.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Binary |  The content to decrypt |  `#[payload]` | 
| File Name a| String |  The internal file name to decrypt, if not present the first will be used |  | 
| Validate If Signature Found a| Boolean |  If the message being decrypted contains a signature, choose whether or not to validate the decrypted message against it |  false | 
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<pgp>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:PASSPHRASE 
* CRYPTO:DECRYPTION 


[[pgpEncrypt]]
=== Pgp Encrypt
`<crypto:pgp-encrypt>`


Encrypt a stream using PGP, giving an ASCII-armored stream output as a result. The encryption is done with the public key of the recipient, so the secret passphrase is not required.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Binary |  The content to encrypt |  `#[payload]` | 
| Algorithm a| Enumeration, one of:

** IDEA
** TRIPLE_DES
** CAST5
** BLOWFISH
** SAFER
** DES
** AES_128
** AES_192
** AES_256
** TWOFISH
** CAMELLIA_128
** CAMELLIA_192
** CAMELLIA_256 |  The symmetric algorithm to use for encryption |  AES_256 | 
| File Name a| String |  The internal file name to use in the resulting PGP header |  stream | 
| Disable MDC a| Boolean |  If set, MDC (modification detection code) will not be used during encryption |  false | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Pgp Key Info a| One of:

* <<PgpAsymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<pgp>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 


[[pgpEncryptAndSign]]
=== Pgp Encrypt And Sign
`<crypto:pgp-encrypt-and-sign>`


Encrypt a stream using PGP, giving an ASCII-armored stream output as a result. The encryption is done with the public key of the recipient, so the secret passphrase is not required.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Binary |  The content to encrypt |  `#[payload]` | 
| Algorithm a| Enumeration, one of:

** IDEA
** TRIPLE_DES
** CAST5
** BLOWFISH
** SAFER
** DES
** AES_128
** AES_192
** AES_256
** TWOFISH
** CAMELLIA_128
** CAMELLIA_192
** CAMELLIA_256 |  The symmetric algorithm to use for encryption |  AES_256 | 
| File Name a| String |  The internal file name to use in the resulting PGP header |  stream | 
| Encryption Key Selection a| <<PgpKeySelection>> |  The key used to encrypt the message. |  | x
| Sign Key Selection a| <<PgpKeySelection>> |  The key used to sign the message. |  | x
| Disable MDC a| Boolean |  If set, MDC (modification detection code) will not be used during encryption |  false | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<pgp>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 


[[pgpEncryptBinary]]
=== Pgp Encrypt Binary
`<crypto:pgp-encrypt-binary>`


Encrypt a stream using PGP, giving a binary output as a result. The encryption is done with the public key of the recipient, so the secret passphrase is not required.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Binary |  The content to encrypt |  `#[payload]` | 
| Algorithm a| Enumeration, one of:

** IDEA
** TRIPLE_DES
** CAST5
** BLOWFISH
** SAFER
** DES
** AES_128
** AES_192
** AES_256
** TWOFISH
** CAMELLIA_128
** CAMELLIA_192
** CAMELLIA_256 |  The symmetric algorithm to use for encryption |  AES_256 | 
| File Name a| String |  The internal file name to use in the resulting PGP header |  stream | 
| Disable MDC a| Boolean |  If set, MDC (modification detection code) will not be used during encryption |  false | 
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Pgp Key Info a| One of:

* <<PgpAsymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<pgp>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 


[[pgpSign]]
=== Pgp Sign
`<crypto:pgp-sign>`


Create a detached (standalone) PGP signature of the stream. The signing is done with the private key of the sender, so the secret passphrase must be provided.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Binary |  The content to sign |  `#[payload]` | 
| Algorithm a| Enumeration, one of:

** MD5
** RIPEMD160
** TIGER_192
** HAVAL_5_160
** DOUBLE_SHA
** SHA1
** SHA224
** SHA256
** SHA384
** SHA512 |  The digest (or hashing) algorithm |  SHA256 | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Pgp Key Info a| One of:

* <<PgpAsymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<pgp>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:KEY 
* CRYPTO:PASSPHRASE 
* CRYPTO:SIGNATURE 


[[pgpSignBinary]]
=== Pgp Sign Binary
`<crypto:pgp-sign-binary>`


Create a detached (standalone) PGP signature of the stream. The signing is done with the private key of the sender, so the secret passphrase must be provided.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Binary |  The content to sign |  `#[payload]` | 
| Algorithm a| Enumeration, one of:

** MD5
** RIPEMD160
** TIGER_192
** HAVAL_5_160
** DOUBLE_SHA
** SHA1
** SHA224
** SHA256
** SHA384
** SHA512 |  The digest (or hashing) algorithm |  SHA256 | 
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Pgp Key Info a| One of:

* <<PgpAsymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<pgp>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:KEY 
* CRYPTO:PASSPHRASE 
* CRYPTO:SIGNATURE 


[[pgpValidate]]
=== Pgp Validate
`<crypto:pgp-validate>`


Validate a PGP signature against a stream, to authenticate it. The validation is done with the public key of the sender, so the secret passphrase is not required.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Value a| Binary |  The message to authenticate |  `#[payload]` | 
| Expected a| Binary |  The signature |  | x
|===


=== For Configurations
* <<pgp>> 

==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:VALIDATION 


[[jceDecryptPbe]]
=== Jce Decrypt Pbe
`<crypto:jce-decrypt-pbe>`


Decrypt a stream using JCE, with a password.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Content a| Binary |  The content to decrypt |  `#[payload]` | 
| Algorithm a| Enumeration, one of:

** PBEWithMD5AndDES
** PBEWithMD5AndTripleDES
** PBEWithSHA1AndDESede
** PBEWithSHA1AndRC2_40
** PBEWithSHA1AndRC2_128
** PBEWithSHA1AndRC4_40
** PBEWithSHA1AndRC4_128
** PBEWithHmacSHA1AndAES_128
** PBEWithHmacSHA224AndAES_128
** PBEWithHmacSHA256AndAES_128
** PBEWithHmacSHA384AndAES_128
** PBEWithHmacSHA512AndAES_128
** PBEWithHmacSHA1AndAES_256
** PBEWithHmacSHA224AndAES_256
** PBEWithHmacSHA256AndAES_256
** PBEWithHmacSHA384AndAES_256
** PBEWithHmacSHA512AndAES_256 |  The algorithm for generating a key from the password |  PBEWithHmacSHA256AndAES_128 | 
| Password a| String |  The password for decryption |  | x
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===


==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:PASSPHRASE 
* CRYPTO:PARAMETERS 
* CRYPTO:DECRYPTION 


[[jceEncryptPbe]]
=== Jce Encrypt Pbe
`<crypto:jce-encrypt-pbe>`


Encrypt a stream using JCE, with a password.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Content a| Binary |  The content to encrypt |  `#[payload]` | 
| Algorithm a| Enumeration, one of:

** PBEWithMD5AndDES
** PBEWithMD5AndTripleDES
** PBEWithSHA1AndDESede
** PBEWithSHA1AndRC2_40
** PBEWithSHA1AndRC2_128
** PBEWithSHA1AndRC4_40
** PBEWithSHA1AndRC4_128
** PBEWithHmacSHA1AndAES_128
** PBEWithHmacSHA224AndAES_128
** PBEWithHmacSHA256AndAES_128
** PBEWithHmacSHA384AndAES_128
** PBEWithHmacSHA512AndAES_128
** PBEWithHmacSHA1AndAES_256
** PBEWithHmacSHA224AndAES_256
** PBEWithHmacSHA256AndAES_256
** PBEWithHmacSHA384AndAES_256
** PBEWithHmacSHA512AndAES_256 |  The algorithm for generating a key from the password |  PBEWithHmacSHA256AndAES_128 | 
| Password a| String |  The password for encryption |  | x
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===


==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:PARAMETERS 


[[jceSignPbe]]
=== Jce Sign Pbe
`<crypto:jce-sign-pbe>`


Sign a stream using JCE, with a key.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Content a| Binary |  The content to sign |  `#[payload]` | 
| Algorithm a| Enumeration, one of:

** HmacPBESHA1
** PBEWithHmacSHA1
** PBEWithHmacSHA224
** PBEWithHmacSHA256
** PBEWithHmacSHA384
** PBEWithHmacSHA512 |  The algorithm used for signing |  PBEWithHmacSHA256 | 
| Password a| String |  The password used to sign |  | x
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===


==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:KEY 
* CRYPTO:PASSPHRASE 
* CRYPTO:SIGNATURE 


[[jceValidatePbe]]
=== Jce Validate Pbe
`<crypto:jce-validate-pbe>`


Validate a stream against a signature, using a key.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Value a| Binary |  The message to authenticate |  `#[payload]` | 
| Expected a| String |  The signature to validate |  | x
| Algorithm a| Enumeration, one of:

** HmacPBESHA1
** PBEWithHmacSHA1
** PBEWithHmacSHA224
** PBEWithHmacSHA256
** PBEWithHmacSHA384
** PBEWithHmacSHA512 |  The algorithm used for signing |  PBEWithHmacSHA256 | 
| Password a| String |  The password used to sign |  | x
|===



==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:VALIDATION 


[[pgpBinaryToArmored]]
=== Pgp Binary To Armored
`<crypto:pgp-binary-to-armored>`


Converts an encrypted PGP message or a PGP signature to an ASCII armored representation, suitable for plain text channels.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Content a| Binary |  The content to convert |  `#[payload]` | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===


==== Throws
* CRYPTO:PARAMETERS 


[[calculateChecksum]]
=== Calculate Checksum
`<crypto:calculate-checksum>`


Calculate the checksum of the stream.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Algorithm a| Enumeration, one of:

** CRC32
** MD2
** MD5
** SHA_1
** SHA_256
** SHA_512 |  The checksum algorithm |  SHA_256 | 
| Content a| Binary |  The content for calculating the checksum |  `#[payload]` | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===


==== Throws
* CRYPTO:CHECKSUM 


[[validateChecksum]]
=== Validate Checksum
`<crypto:validate-checksum>`


Validate the checksum of the stream against an expected checksum.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Algorithm a| Enumeration, one of:

** CRC32
** MD2
** MD5
** SHA_1
** SHA_256
** SHA_512 |  The checksum algorithm |  SHA_256 | 
| Value a| Binary |  The content for calculating the checksum |  `#[payload]` | 
| Expected a| String |  The expected checksum as an hexadecimal string |  | x
|===



==== Throws
* CRYPTO:MISSING_KEY 
* CRYPTO:VALIDATION 



== Types
[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  | 
|===

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the MAX buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Initial amount of memory to allocate to the data stream. If the streamed data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of *Max In Memory Size value*. |  | 
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  | 
| Max Buffer Size a| Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *Initial Buffer Size*, *Buffer Size Increment*, and *Buffer Unit* fields. |  | 
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer's content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance:

* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.

* Configure a smaller buffer size to decrease memory load at the expense of response time. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Size* field. |  | 
|===

[[PgpKeySelection]]
=== Pgp Key Selection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Id a| String | The key ID, as defined in the JCE configuration. |  | 
| Pgp Key Info a| One of:

* <<PgpAsymmetricKeyInfo>> | An inline key definition. |  | 
|===

[[PgpAsymmetricKeyInfo]]
=== Pgp Asymmetric Key Info

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Id a| String | Internal key ID for referencing from operations. |  | x
| Key Pair Identifier a| <<PgpAsymmetricKeyIdentifier>> | A way to identify the key inside the keystore. |  | x
| Passphrase a| String | The password for unlocking the secret part of the key. |  | 
|===

[[PgpAsymmetricKeyIdentifier]]
=== Pgp Asymmetric Key Identifier

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fingerprint a| String |  |  | 
| Principal a| String |  |  | 
|===

[[JceAsymmetricKeyInfo]]
=== Jce Asymmetric Key Info

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Id a| String | Internal key ID for referencing from operations. |  | x
| Alias a| String | Alias of the key in the keystore. |  | x
| Password a| String | Password used to unlock the private part of the key. |  | 
|===

[[JceSymmetricKeyInfo]]
=== Jce Symmetric Key Info

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Id a| String | Internal key ID for referencing from operations. |  | x
| Alias a| String | Alias of the key in the keystore. |  | x
| Password a| String | Password used to unlock the key. |  | x
|===