cryptography/2.0/modules/ROOT/pages/cryptography-module-reference.adoc
= Cryptography Module Reference 2.0

Cryptography Module provides cryptography capabilities to a Mule application.

== Configurations
---
[[Jce]]
=== Jce


JCE configuration for Java keystores and inline keys.


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Keystore a| String |  Path to the keystore file. |  | 
| Type a| Enumeration, one of:

** JKS
** JCEKS
** PKCS12
** BCFKS |  Type of the keystore. |  | x
| Password a| String |  Password for unlocking the keystore. |  | 
| Jce Key Infos a| Array of One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  List of keys to be considered, with internal IDs for referencing them. |  | 
| Use random IVs a| Boolean |  Use random initial vectors (IVs) for CBC algorithms. In case of decryption, it assumes IV is prepended on the ciphertext. |  false | 
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  | 
|===


== Supported Operations

* <<JceDecrypt>> 
* <<JceEncrypt>> 
* <<JceSign>> 
* <<JceValidate>> 
* <<PgpDecrypt>> 
* <<PgpEncrypt>> 
* <<PgpEncryptAndSign>> 
* <<PgpEncryptBinary>> 
* <<PgpSign>> 
* <<PgpSignBinary>> 
* <<PgpValidate>> 
* <<XmlDecrypt>> 
* <<XmlEncrypt>> 
* <<XmlSign>> 
* <<XmlValidate>>
* <<CalculateChecksum>>
* <<ValidateChecksum>> 


---
[[Pgp]]
=== Pgp


Keystore configuration for GPG. Contains a list of keys with internal names to use in the operations.


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Public Keyring a| String |  Public key ring file. |  | 
| Private Keyring a| String |  Private key ring file. |  | 
| Pgp Key Infos a| Array of One of:

* <<PgpAsymmetricKeyInfo>> |  List of keys to be considered, with internal IDs for referencing them. |  | 
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  | 
|===



== Operations

[[JceDecrypt]]
== Jce Decrypt
`<crypto:jce-decrypt>`


Decrypt a stream using JCE, with a key.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Any |  the content to decrypt |  #[payload] | 
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Cipher a| String | A raw cipher string in the form "algorithm/mode/padding" according to the Java crypto documentation, for example `AES/CBC/PKCS5Padding`. Note that GCM mode is currently not supported, and not all algorithm/mode/padding combinations are valid. |  | 
| Algorithm a| Enumeration, one of:

** AES
** AESWrap
** ARCFOUR
** Blowfish
** DES
** DESede
** RC2
** DESedeWrap
** RSA |  Algorithm from a list of valid definitions, this is preferred. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Jce>> 

=== Throws

* CRYPTO:DECRYPTION 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:PASSPHRASE 


[[JceEncrypt]]
== Jce Encrypt
`<crypto:jce-encrypt>`


Encrypt a stream using JCE, with a key.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Any |  the content to encrypt |  #[payload] | 
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Cipher a| String | A raw cipher string in the form "algorithm/mode/padding" according to the Java crypto documentation, for example `AES/CBC/PKCS5Padding`. Note that GCM mode is currently not supported, and not all algorithm/mode/padding combinations are valid. |  | 
| Algorithm a| Enumeration, one of:

** AES
** AESWrap
** ARCFOUR
** Blowfish
** DES
** DESede
** RC2
** DESedeWrap
** RSA |  Algorithm from a list of valid definitions, this is preferred. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Jce>> 

=== Throws

* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 


[[JceSign]]
== Jce Sign
`<crypto:jce-sign>`


Sign a stream using JCE, with a key.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Any |  the content to sign |  #[payload] | 
| Algorithm a| Enumeration, one of:

** MD2withRSA
** MD5withRSA
** SHA1withRSA
** SHA224withRSA
** SHA256withRSA
** SHA384withRSA
** SHA512withRSA
** NONEwithDSA
** SHA1withDSA
** SHA224withDSA
** SHA256withDSA
** HmacMD5
** HmacSHA1
** HmacSHA224
** HmacSHA256
** HmacSHA384
** HmacSHA512 |  the algorithm used for signing |  HmacSHA256 | 
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations

* <<Jce>> 

=== Throws

* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:PASSPHRASE 
* CRYPTO:SIGNATURE 


[[JceValidate]]
== Jce Validate
`<crypto:jce-validate>`


Validate a stream against a signature, using a key.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Value a| Any |  the message to authenticate |  #[payload] | 
| Expected a| String |  the signature to validate |  | x
| Algorithm a| Enumeration, one of:

** MD2withRSA
** MD5withRSA
** SHA1withRSA
** SHA224withRSA
** SHA256withRSA
** SHA384withRSA
** SHA512withRSA
** NONEwithDSA
** SHA1withDSA
** SHA224withDSA
** SHA256withDSA
** HmacMD5
** HmacSHA1
** HmacSHA224
** HmacSHA256
** HmacSHA384
** HmacSHA512 |  the algorithm used for signing |  HmacSHA256 | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===


=== For Configurations

* <<Jce>> 

=== Throws

* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:VALIDATION 


[[XmlDecrypt]]
== Xml Decrypt
`<crypto:xml-decrypt>`


Decrypt the XML document.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Any |  the document to decrypt |  #[payload] | 
| Element Path a| String |  |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Jce>> 

=== Throws

* CRYPTO:DECRYPTION 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:PASSPHRASE 


[[XmlEncrypt]]
== Xml Encrypt
`<crypto:xml-encrypt>`


Encrypt the XML document.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Any |  the document to encrypt |  #[payload] | 
| Algorithm a| Enumeration, one of:

** AES_CBC
** AES_GCM
** TRIPLEDES |  the algorithm for encryption |  AES_CBC | 
| Element Path a| String |  the path to the element to encrypt, if empty the whole document is considered |  | 
| Encrypt Content a| Boolean |  encrypt the XML element or its content, if false the whole XML element is encrypted. |  true | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Encryption Algorithm a| Enumeration, one of:

** RSA15
** RSA_OAEP
** RSA_OAEP_11 |  |  RSA_OAEP | 
| Canonicalization algorithm a| Enumeration, one of:

** EXCLUSIVE
** EXCLUSIVE_WITH_COMMENTS
** INCLUSIVE
** INCLUSE_WITH_COMMENTS |  |  EXCLUSIVE | 
| Digest Algorithm a| Enumeration, one of:

** RIPEMD160
** SHA1
** SHA256
** SHA512 |  |  SHA512 | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Jce>> 

=== Throws

* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 


[[XmlSign]]
== Xml Sign
`<crypto:xml-sign>`


Sign an XML document.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Any |  the XML document to sign |  #[payload] | 
| Digest Algorithm a| Enumeration, one of:

** RIPEMD160
** SHA1
** SHA256
** SHA512 |  the hashing algorithm for signing |  SHA256 | 
| Canonicalization Algorithm a| Enumeration, one of:

** EXCLUSIVE
** EXCLUSIVE_WITH_COMMENTS
** INCLUSIVE
** INCLUSE_WITH_COMMENTS |  the canonicalization method for whitespace and namespace unification |  EXCLUSIVE | 
| Type a| Enumeration, one of:

** DETACHED
** ENVELOPED
** ENVELOPING |  the type of signature to create |  ENVELOPED | 
| Element Path a| String |  for internally detached signatures, an unambiguous XPath expression resolving to the element to sign |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Jce>> 

=== Throws

* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:PASSPHRASE 
* CRYPTO:SIGNATURE 


[[XmlValidate]]
== Xml Validate
`<crypto:xml-validate>`


Validate an XML signed document.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Any |  the document to verify (includes the signature) |  #[payload] | 
| Element Path a| String |  for internally detached signatures, an unambiguous XPath expression resolving to the signed element |  | 
| Use Inline Certificate If Present a| Boolean |  Use inline defined certificate if found |  false | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Jce Key Info a| One of:

* <<JceAsymmetricKeyInfo>>
* <<JceSymmetricKeyInfo>> |  An inline key definition. |  | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===


=== For Configurations

* <<Jce>> 

=== Throws

* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:VALIDATION 


[[PgpDecrypt]]
== Pgp Decrypt
`<crypto:pgp-decrypt>`


Decrypt a stream using PGP, giving the original data as a result. The decryption is done with the private key, so the secret passphrase must be provided.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Any |  the content to decrypt |  #[payload] | 
| File Name a| String |  the internal file name to decrypt, if not present the first will be used |  | 
| Validate If Signature Found a| Boolean |  If the message being decrypted contains a signature, choose whether or not to validate the decrypted message against it |  false | 
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | 
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Pgp>> 

=== Throws

* CRYPTO:DECRYPTION 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 
* CRYPTO:PASSPHRASE 


[[PgpEncrypt]]
== Pgp Encrypt
`<crypto:pgp-encrypt>`


Encrypt a stream using PGP, giving an ASCII-armored stream output as a result. The encryption is done with the public key of the recipient, so the secret passphrase is not required.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Any |  the content to encrypt |  #[payload] | 
| Algorithm a| Enumeration, one of:

** IDEA
** TRIPLE_DES
** CAST5
** BLOWFISH
** SAFER
** DES
** AES_128
** AES_192
** AES_256
** TWOFISH
** CAMELLIA_128
** CAMELLIA_192
** CAMELLIA_256 |  the symmetric algorithm to use for encryption |  AES_256 | 
| File Name a| String |  the internal file name to use in the resulting PGP header |  stream | 
| Disable MDC a| Boolean |  If set, MDC (modification detection code) will not be used during encryption |  false | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | 
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Pgp Key Info a| One of:

* <<PgpAsymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Pgp>> 

=== Throws

* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 


[[PgpEncryptAndSign]]
== Pgp Encrypt And Sign
`<crypto:pgp-encrypt-and-sign>`


Encrypt a stream using PGP, giving an ASCII-armored stream output as a result. The encryption is done with the public key of the recipient, so the secret passphrase is not required.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Any |  the content to encrypt |  #[payload] | 
| Algorithm a| Enumeration, one of:

** IDEA
** TRIPLE_DES
** CAST5
** BLOWFISH
** SAFER
** DES
** AES_128
** AES_192
** AES_256
** TWOFISH
** CAMELLIA_128
** CAMELLIA_192
** CAMELLIA_256 |  the symmetric algorithm to use for encryption |  AES_256 | 
| File Name a| String |  the internal file name to use in the resulting PGP header |  stream | 
| Encryption Key Selection a| <<PgpKeySelection>> |  the key used to encrypt the message. |  | x
| Sign Key Selection a| <<PgpKeySelection>> |  the key used to sign the message. |  | x
| Disable MDC a| Boolean |  If set, MDC (modification detection code) will not be used during encryption |  false | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | 
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Pgp>> 

=== Throws

* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 


[[PgpEncryptBinary]]
== Pgp Encrypt Binary
`<crypto:pgp-encrypt-binary>`


Encrypt a stream using PGP, giving a binary output as a result. The encryption is done with the public key of the recipient, so the secret passphrase is not required.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Any |  the content to encrypt |  #[payload] | 
| Algorithm a| Enumeration, one of:

** IDEA
** TRIPLE_DES
** CAST5
** BLOWFISH
** SAFER
** DES
** AES_128
** AES_192
** AES_256
** TWOFISH
** CAMELLIA_128
** CAMELLIA_192
** CAMELLIA_256 |  the symmetric algorithm to use for encryption |  AES_256 | 
| File Name a| String |  the internal file name to use in the resulting PGP header |  stream | 
| Disable MDC a| Boolean |  If set, MDC (modification detection code) will not be used during encryption |  false | 
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | 
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Pgp Key Info a| One of:

* <<PgpAsymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Pgp>> 

=== Throws

* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 


[[PgpSign]]
== Pgp Sign
`<crypto:pgp-sign>`


Create a detached (standalone) PGP signature of the stream. The signing is done with the private key of the sender, so the secret passphrase must be provided.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Any |  the content to sign |  #[payload] | 
| Algorithm a| Enumeration, one of:

** MD5
** RIPEMD160
** TIGER_192
** HAVAL_5_160
** DOUBLE_SHA
** SHA1
** SHA224
** SHA256
** SHA384
** SHA512 |  the digest (or hashing) algorithm |  SHA256 | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | 
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Pgp Key Info a| One of:

* <<PgpAsymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Pgp>> 

=== Throws

* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:PASSPHRASE 
* CRYPTO:SIGNATURE 


[[PgpSignBinary]]
== Pgp Sign Binary
`<crypto:pgp-sign-binary>`


Create a detached (standalone) PGP signature of the stream. The signing is done with the private key of the sender, so the secret passphrase must be provided.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Content a| Any |  the content to sign |  #[payload] | 
| Algorithm a| Enumeration, one of:

** MD5
** RIPEMD160
** TIGER_192
** HAVAL_5_160
** DOUBLE_SHA
** SHA1
** SHA224
** SHA256
** SHA384
** SHA512 |  the digest (or hashing) algorithm |  SHA256 | 
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | 
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Key Id a| String |  The key ID, as defined in the JCE configuration. |  | 
| Pgp Key Info a| One of:

* <<PgpAsymmetricKeyInfo>> |  An inline key definition. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Pgp>> 

=== Throws

* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:PASSPHRASE 
* CRYPTO:SIGNATURE 


[[PgpValidate]]
== Pgp Validate
`<crypto:pgp-validate>`


Validate a PGP signature against a stream, to authenticate it. The validation is done with the public key of the sender, so the secret passphrase is not required.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Value a| Any |  the message to authenticate |  #[payload] | 
| Expected a| Any |  the signature |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===


=== For Configurations

* <<Pgp>> 

=== Throws

* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:VALIDATION 


[[CalculateChecksum]]
== Calculate Checksum
`<crypto:calculate-checksum>`


Calculate the checksum of the stream.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Algorithm a| Enumeration, one of:

** CRC32
** MD2
** MD5
** SHA_1
** SHA_256
** SHA_512 |  the checksum algorithm |  SHA_512 | 
| Content a| Any |  the content for calculating the checksum |  #[payload] | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |String
|===


=== Throws

* CRYPTO:CHECKSUM 


[[JceDecryptPbe]]
== Jce Decrypt Pbe
`<crypto:jce-decrypt-pbe>`


Decrypt a stream using JCE, with a password.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Content a| Any |  the content to decrypt |  #[payload] | 
| Algorithm a| String |  the algorithm for generating a key from the password |  PBKDF2withHmacSHA512__AES256__CBC__PKCS5Padding (FIPS) | 
| Password a| String |  the password for decryption |  | x
| Password Salt a| String |  the password salt used to sign. Recommended minimum: 16 bytes of random data to ensure uniqueness and prevent rainbow table attacks. The salt is encoded in UTF-8 and cannot be modified after creation. |  | 
| Iteration Count a| Number |  the iteration count used to sign. Recommended minimum: 100,000 iterations to slow down brute-force attacks in modern hardware. |  0 | 
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===


=== Throws

* CRYPTO:DECRYPTION 
* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:PASSPHRASE 


[[JceEncryptPbe]]
== Jce Encrypt Pbe
`<crypto:jce-encrypt-pbe>`


Encrypt a stream using JCE, with a password.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Content a| Any |  the content to encrypt |  #[payload] | 
| Algorithm a| String |  the algorithm for generating a key from the password |  PBKDF2withHmacSHA512__AES256__CBC__PKCS5Padding | 
| Password a| String |  the password for encryption |  | x
| Password Salt a| String |  the password salt used to sign. Recommended minimum: 16 bytes of random data to ensure uniqueness and prevent rainbow table attacks. The salt is encoded in UTF-8 and cannot be modified after creation. |  | x
| Iteration Count a| Number |  the iteration count used to sign. Recommended minimum: 100,000 iterations to slow down brute-force attacks in modern hardware. |  | x
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===


=== Throws

* CRYPTO:ENCRYPTION 
* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 


[[JceSignPbe]]
== Jce Sign Pbe
`<crypto:jce-sign-pbe>`


Sign a stream using JCE, with a key.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Content a| Any |  the content to sign |  #[payload] | 
| Algorithm a| String |  the algorithm used for signing |  PBKDF2withHmacSHA512 | 
| Password a| String |  the password used to sign |  | x
| Password Salt a| String |  the password salt used to sign. Recommended minimum: 16 bytes of random data to ensure uniqueness and prevent rainbow table attacks. The salt is encoded in UTF-8 and cannot be modified after creation. |  | x
| Iteration Count a| Number |  the iteration count used to sign. Recommended minimum: 100,000 iterations to slow down brute-force attacks in modern hardware. |  | x
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |String
|===


=== Throws

* CRYPTO:KEY 
* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:PASSPHRASE 
* CRYPTO:SIGNATURE 


[[JceValidatePbe]]
== Jce Validate Pbe
`<crypto:jce-validate-pbe>`


Validate a stream against a signature, using a key.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Value a| Any |  the message to authenticate |  #[payload] | 
| Expected a| String |  the signature to validate |  | x
| Algorithm a| String |  the algorithm used for signing |  PBKDF2withHmacSHA512 | 
| Password a| String |  the password used to sign |  | x
| Password Salt a| String |  the password salt used to sign. Recommended minimum: 16 bytes of random data to ensure uniqueness and prevent rainbow table attacks. The salt is encoded in UTF-8 and cannot be modified after creation. |  | 
| Iteration Count a| Number |  the iteration count used to sign. Recommended minimum: 100,000 iterations to slow down brute-force attacks in modern hardware. |  0 | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===



=== Throws

* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:VALIDATION 


[[PgpBinaryToArmored]]
== Pgp Binary To Armored
`<crypto:pgp-binary-to-armored>`


Converts an encrypted PGP message or a PGP signature to an ASCII armored representation, suitable for plain text channels.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Content a| Any |  the content to convert |  #[payload] | 
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===


=== Throws

* CRYPTO:PARAMETERS 


[[ValidateChecksum]]
== Validate Checksum
`<crypto:validate-checksum>`


Validate the checksum of the stream against an expected checksum.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Algorithm a| Enumeration, one of:

** CRC32
** MD2
** MD5
** SHA_1
** SHA_256
** SHA_512 |  the checksum algorithm |  SHA_512 | 
| Value a| Any |  the content for calculating the checksum |  #[payload] | 
| Expected a| String |  the expected checksum as an hexadecimal string |  | x
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
|===



=== Throws

* CRYPTO:MISSING_KEY 
* CRYPTO:PARAMETERS 
* CRYPTO:VALIDATION 



== Types
[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  | 
|===

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the MAX buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Initial amount of memory to allocate to the data stream. If the streamed data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of *Max In Memory Size value*. |  | 
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  | 
| Max Buffer Size a| Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *Initial Buffer Size*, *Buffer Size Increment*, and *Buffer Unit* fields. |  | 
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer's content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance:

* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.

* Configure a smaller buffer size to decrease memory load at the expense of response time. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Size* field. |  | 
|===

[[ErrorMapping]]
=== Error Mapping

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT |  |  | 
| Target a| String |  |  | x
|===

[[PgpKeySelection]]
=== Pgp Key Selection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Id a| String | The key ID, as defined in the JCE configuration. |  | 
| Pgp Key Info a| One of:

* <<PgpAsymmetricKeyInfo>> | An inline key definition. |  | 
|===

[[PgpAsymmetricKeyInfo]]
=== Pgp Asymmetric Key Info

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Id a| String | Internal key ID for referencing from operations. |  | x
| Key Pair Identifier a| <<PgpAsymmetricKeyIdentifier>> | A way to identify the key inside the keystore. |  | x
| Passphrase a| String | The password for unlocking the secret part of the key. |  | 
|===

[[PgpAsymmetricKeyIdentifier]]
=== Pgp Asymmetric Key Identifier

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fingerprint a| String |  |  | 
| Principal a| String |  |  | 
|===

[[JceAsymmetricKeyInfo]]
=== Jce Asymmetric Key Info

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Id a| String | Internal key ID for referencing from operations. |  | x
| Alias a| String | Alias of the key in the keystore. |  | x
| Password a| String | Password used to unlock the private part of the key. |  | 
|===

[[JceSymmetricKeyInfo]]
=== Jce Symmetric Key Info

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Id a| String | Internal key ID for referencing from operations. |  | x
| Alias a| String | Alias of the key in the keystore. |  | x
| Password a| String | Password used to unlock the key. |  | x
|===
